

cmake_minimum_required(VERSION 3.6)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)


set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/install)


set(HDRI_DIR ${CMAKE_SOURCE_DIR}/HDRI)

# add ARCH check
if(NOT "${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
    set(PATH_MODIFIER "x86")
    set(POSTFIX_MODIFIER "")
    set(FILENAME_MODIFIER "32")
elseif("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
    set(PATH_MODIFIER "x64")
    set(POSTFIX_MODIFIER "_x64")
    set(FILENAME_MODIFIER "64")
else()
    message(FATAL_ERROR "${CMAKE_GENERATOR} missing! Can't continue")
endif()


project(HDR)

set(CMAKE_FIND_PACKAGE_SORT_ORDER NATURAL)
set(CMAKE_FIND_PACKAGE_SORT_DIRECTION DEC)


find_package(OpenCV REQUIRED)


add_subdirectory(HDRI)


#debug messages
message("CMAKE_BUILD_TYPE= ${CMAKE_BUILD_TYPE}")
message("CMAKE_SOURCE_DIR= ${CMAKE_SOURCE_DIR}")
message("CMAKE_BINARY_DIR= ${CMAKE_BINARY_DIR}")
message("CMAKE_INSTALL_PREFIX= ${CMAKE_INSTALL_PREFIX}")
message("CMAKE_CXX_STANDARD= ${CMAKE_CXX_STANDARD}")
message("CMAKE_SYSTEM_PREFIX_PATH= ${CMAKE_SYSTEM_PREFIX_PATH}")

message("OpenCV_INCLUDE_DIRS= ${OpenCV_INCLUDE_DIRS}")